# cmdstan

./: CMakeLists.txt  MPI_NOTES  cholesky1.txt  cholesky2.txt  cholesky3.txt  cholesky4.txt  cholesky5.txt  cholesky6.txt  cholesky7.txt  cholesky8.txt  cholesky9.txt  examples.sh  hier_logistic.stan  hier_logistic_1_1.data.R  hier_logistic_1_2.data.R  hier_logistic_1_3.data.R  hier_logistic_1_4.data.R  hier_logistic_1_5.data.R  hier_logistic_1_6.data.R  hier_logistic_2_1.data.R  hier_logistic_2_2.data.R  hier_logistic_2_3.data.R  hier_logistic_2_4.data.R  hier_logistic_2_5.data.R  hier_logistic_2_6.data.R  hier_logistic_3_1.data.R  hier_logistic_3_2.data.R  hier_logistic_3_3.data.R  hier_logistic_3_4.data.R  hier_logistic_3_5.data.R  hier_logistic_3_6.data.R  hier_logistic_4_1.data.R  hier_logistic_4_2.data.R  hier_logistic_4_3.data.R  hier_logistic_4_4.data.R  hier_logistic_4_5.data.R  hier_logistic_4_6.data.R  hier_logistic_5_1.data.R  hier_logistic_5_2.data.R  hier_logistic_5_3.data.R  (+10 more)
examples/bernoulli/: bernoulli.mass.R
examples/blocker/: blocker.hpp  blocker.mass.R
examples/laplace_pde/: laplace_pde.data.R  laplace_pde.hpp  laplace_pde.stan
examples/mpi/: check.R  fit_mpi.sh  fit_mpi4.sh  mpi_defs.hpp  mpi_defs2.hpp  mpi_defs3.hpp  mpi_init.R  mpi_test_parallel4.R  mpi_test_serial.R  mpi_testgrad-0.R  mpi_testgrad-1.R  mpi_testgrad-2.R  multi_command.cpp  multi_command_fused.cpp  multi_command_fused_globals.cpp  oral_2cmt_mpi.stan  oral_2cmt_mpi2.stan  oral_2cmt_mpi3.stan  oral_2cmt_mpi4.R  oral_2cmt_mpi4.stan  oral_2cmt_mpi4B.stan
make/: command  local  models
papers/exhaustions/: gauss_corr.stan  gauss_iid.stan  irt.stan  run_all  run_all_gauss  run_all_static_uniform  run_gauss_corr_exhaustion_1  run_gauss_corr_exhaustion_2  run_gauss_corr_exhaustion_3  run_gauss_corr_nuts  run_gauss_corr_static_uniform  run_gauss_iid_exhaustion_1  run_gauss_iid_exhaustion_2  run_gauss_iid_exhaustion_3  run_gauss_iid_nuts  run_irt_exhaustion_1  run_irt_exhaustion_2  run_irt_exhaustion_3  run_irt_nuts
src/cmdstan/: command.hpp  main-mpi.cpp  main-mpi2.cpp  main-mpi3.cpp  nuts_with_mass_matrix.hpp  print_diagnostics.cpp  process_rb.cpp
src/cmdstan/arguments/: arg_data.hpp  arg_data_mass_matrix_file.hpp
src/docs/cmdstan-guide/: CMakeLists.txt  cmdstan-guide.tex  references.tex  title.tex
src/test/: CMakeLists.txt
src/test/interface/: CMakeLists.txt
src/test/models/: CMakeLists.txt
src/test/test-models/: CMakeLists.txt
